Changes background colour

--- a/src/assets/_scss/custom/_variables.scss
+++ b/src/assets/_scss/custom/_variables.scss
@@ -8,4 +8,4 @@
 // --------------------------------------------------
 
 // For example, changing the primary color
-$dark: #324856;
+$dark: #02003b;
