--- a/src/assets/_scss/core/_variables-bootstrap.scss
+++ b/src/assets/_scss/core/_variables-bootstrap.scss
@@ -19,7 +19,7 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black:    #000 !default;
 
-$primary:       #324856 !default;
+$primary:       #02003b !default;
 $secondary:     $gray-600 !default;
 $success:       #46c37b !default;
 $info:          #70b9eb !default;
